--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
     <br /><br />
 
     <div id="root"></div>
-    <script type="text/babel" src="index.js"></script>
+    <script type="text/babel" src="App.js"></script>
   </body>
 </html>
